# GeneralDataManger

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/api/: parsers.py
backend/parsers/: base.py  manager.py  registry.py
backend/parsers/demo/db3/: registry.yaml
backend/parsers/demo/db4/: registry.yaml  topic_registry.py
backend/parsers/demo/db4/proto/interface/: adas_function.proto  apa.proto  ascs.proto  cali_req.proto  cali_res.proto  csrs.proto  dag_info.proto  dag_trigger_info.proto  daq_info.proto  epitome.proto  frame.proto  history_point.proto  hmi_icc_draw.proto  input_parking.proto  module_task.proto  output_parking.proto  prediction.proto  resim_info.proto  sensor_frs.proto  sensor_ihcs.proto  sensor_lamk.proto  sensor_tre.proto  sensor_tsr.proto  system_info.proto  topics.proto  transaction.proto  vehicle_body.proto  vehicle_chassis.proto  version_info.proto
backend/parsers/demo/db4/proto/model/: aeb_flag.proto  calibration_result.proto  calibration_status.proto  camera.proto  camera_extrinsics.proto  camera_intrinsics.proto  eol_initial.proto  gnss.proto  imu.proto  navi.proto  odo.proto  rtk.proto  sensor_obstacle.proto  sslidar.proto  tsm.proto  tsm_client_req.proto  tsm_client_state.proto
backend/parsers/demo/db4/proto/type/: base.proto  basic.proto  common_type.proto  control_point.proto  dynamic_obstacle.proto  freespace_point.proto  image.proto  obstacle_raw.proto  odometry_type.proto  parking_event.proto  parking_slot.proto  real3d.proto  (+6 more)
backend/parsers/demo/noah_txt/: registry.yaml
(+1158 files in other folders)
