[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gdm-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sortedcontainers>=2.4",
    "protobuf>=4.25",
    "RestrictedPython>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",         # FastAPI 测试客户端
]

[tool.setuptools.packages.find]
where = ["."]
